fixed register redirect when user is logged in and connected checkout html

--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href = "/static/css/register.css"/>
 </head>
 <body>
-    <script src = 'static/js/register.js'></script>
+    
   <div class="card" role="main" aria-labelledby="reg-title">
     <h1 id="reg-title">Create your account</h1>
     <p class="lead">Join Joykart to buy stuffs at low price.</p>
@@ -34,11 +34,12 @@
 
       <div class="footer">
         Already have an account?
-        <a href="login.html" aria-label="Go to login">Login</a>
+        <a href="/login" aria-label="Go to login">Login</a>
       </div>
 
       <div id="msg" role="status" aria-live="polite"></div>
     </form>
   </div>
+  <script src = '/static/js/register.js'></script>
 </body>
 </html>
