--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -36,6 +36,15 @@
 
     </head>
 	<body>
+		<div id="top-header">
+				<div class="container">
+					
+					<ul class="header-links pull-right">
+						
+						<li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+					</ul>
+				</div>
+			</div>
 			<!-- MAIN HEADER -->
 			<div id="header">
 				<!-- container -->
@@ -73,7 +82,7 @@
 							<div class="header-ctn">
 								<!-- Wishlist -->
 								<div>
-									<a href="static/login.html">
+									<a href="/login">
 										<i class="fa fa-sign-in"></i>
 										<span>Login</span>
 										
