--- a/templates/login.html
+++ b/templates/login.html
@@ -30,12 +30,15 @@
 
             <div class="footer">
                 Don't have an account?
-                <a href="register.html">Create one</a>
+                <a href="/register">Create one</a>
             </div>
 
             <div id="msg"></div>
         </form>
     </div>
+    <script src="/static/js/login.js">
+        	 
+    </script>
 </body>
 
 </html>
