--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,3 +1,9 @@
+<script>
+  const token = localStorage.getItem("access_token");
+  if (!token) {
+      window.location.replace("/login");
+  }
+</script>
 <!DOCTYPE html>
 <html lang="en">
 	<head>
