--- a/templates/product.html
+++ b/templates/product.html
@@ -68,7 +68,7 @@ function isTokenExpired(token) {
 						<!-- LOGO -->
 						<div class="col-md-3">
 							<div class="header-logo">
-								<a href="#" class="logo">
+								<a href="/dashboard" class="logo">
 									<img src="static/img/logo.png" alt="">
 								</a>
 							</div>
