rendered account information through template and removed scripts.

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -38,7 +38,8 @@
 
 <h2>JOYCART</h2>
 <a href = '/cart'>View Cart</a>
-<a href = '/account'>My Account</a>
+<a href = '/orders'>Orders</a>
+<a href = '/api/account'>My Profile</a>
 <form action="/api/logout" method="post">
     <button type="submit">Logout</button>
 </form>
