--- a/templates/account.html
+++ b/templates/account.html
@@ -1,159 +1,12 @@
-<script>
-	
-function isTokenExpired(token) {
-    try {
-      const payload = JSON.parse(atob(token.split('.')[1]));
-      const now = Math.floor(Date.now() / 1000);
-      return payload.exp <= now;
-    } catch (e) {
-      return true;
-    }
-  }
-
-  const token = localStorage.getItem("access_token");
-
-  if (!token || isTokenExpired(token)) {
-    console.log("No token or expired token → redirecting");
-    localStorage.removeItem("access_token");
-    window.location.replace("/login");
-  }
-
-
-</script>
-
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+<html>
+<head>
+    <title>My Profile</title>
+</head>
+<body>
+<h2>My Profile</h2>
 
-		<title>Joykart</title>
-
-		<!-- Google font -->
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
-
-		<!-- Bootstrap -->
-		<link type="text/css" rel="stylesheet" href="static/css/bootstrap.min.css"/>
-
-		<!-- Slick -->
-		<link type="text/css" rel="stylesheet" href="static/css/slick.css"/>
-		<link type="text/css" rel="stylesheet" href="static/css/slick-theme.css"/>
-
-		<!-- nouislider -->
-		<link type="text/css" rel="stylesheet" href="static/css/nouislider.min.css"/>
-
-		<!-- Font Awesome Icon -->
-		<link rel="stylesheet" href="static/css/font-awesome.min.css">
-
-		<!-- Custom stlylesheet -->
-		<link type="text/css" rel="stylesheet" href="static/css/style.css"/>
-
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
-
-    </head>
-	<body>
-		<header>
-			<!-- MAIN HEADER -->
-			<div id="header">
-				<!-- container -->
-				<div class="container">
-					<!-- row -->
-					<div class="row">
-						<!-- LOGO -->
-						<div class="col-md-3">
-							<div class="header-logo">
-								<a href="/dashboard" class="logo">
-									<img src="static/img/logo.png" alt="">
-								</a>
-							</div>
-						</div>
-						<!-- /LOGO -->
-
-						<!-- SEARCH BAR -->
-						<div class="col-md-6">
-							<div class="header-search">
-								<form>
-									<select class="input-select">
-										<option value="0">All Categories</option>
-										<option value="1">Category 01</option>
-										<option value="1">Category 02</option>
-									</select>
-									<input class="input" placeholder="Search here">
-									<button class="search-btn">Search</button>
-								</form>
-							</div>
-						</div>
-						<!-- /SEARCH BAR -->
-
-						<!-- ACCOUNT -->
-						<div class="col-md-3 clearfix">
-							<div class="header-ctn">
-									<div>
-											<a href="/checkout">
-												<i class="fa fa-shopping-cart" aria-hidden="true"></i>
-											<span>View Cart</span></a>
-										</div>
-								<div >
-									<a href="#" id="logout">
-										<i class="fa fa-sign-out" aria-hidden="true"></i>
-
-										<span>Log Out</span></a>
-								</div>
-								</div>
-								</header>
-		
-
-
-<!-- ACCOUNT SECTION -->
-<div class="section">
-  <div class="container">
-    <div class="row">
-
-      <div class="col-md-6 col-md-offset-3">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">My Account</h3>
-          </div>
-
-          <div class="panel-body">
-            <p><strong>Username:</strong> <span id="username"></span></p>
-            <p><strong>Email:</strong> <span id="email"></span></p>
-
-            
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div>
-
-<script>
-  // TEMP data (replace later with backend fetch)
-  document.getElementById("username").innerText =
-    localStorage.getItem("username") ;
-
-  document.getElementById("email").innerText =
-    localStorage.getItem("email");
-
-    const logoutBtn = document.getElementById('logout');
-    if (logoutBtn) {
-      logoutBtn.addEventListener('click', (e) => {
-        e.preventDefault();
-        localStorage.clear();
-        window.location.replace('/');
-      });
-    }
-  
-
-</script>
-
+<p><b>Username:</b> {{ username }}</p>
+<p><b>Email:</b> {{ email }}</p>
 </body>
 </html>
