added seller link to dashboard with seller check and registration

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -40,7 +40,7 @@
 <a href = '/cart'>View Cart</a>
 <a href = '/orders'>Orders</a>
 <a href = '/api/profile'>My Profile</a>
-<a href = '/seller/register'>Become A seller</a><br></br>
+<a href= "/api/seller/check">Seller Hub</a>
 <form action="/api/logout" method="post">
     <button type="submit">Logout</button>
 </form>
