--- a/templates/error.html
+++ b/templates/error.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Page Not Found</title>
+    <title>Error</title>
 </head>
 <body>
-
-    <h1>404</h1>
-
-
     {% if message %}
         <p>{{ message }}</p>
     {% else %}
