1.modified seller.py to check whether user is registered as seller,if yes then go to dashboard 2.added cookie expiry time

--- a/templates/seller_register.html
+++ b/templates/seller_register.html
@@ -1,6 +1,6 @@
 <h2>Become a Seller</h2>
 
-<form method="post" action="/api/seller/register">
+<form method="post" action="/seller/register">
     <label>Store name</label><br>
     <input name="store_name" required><br><br>
 
