--- a/templates/payment_status.html
+++ b/templates/payment_status.html
@@ -8,8 +8,8 @@
 
 <hr>
 
-<p><b>Payment Status :</b> {{ status }}</p>
-<p><b>Details:</b> {{ details }}</p>
+
+<p><b>Status:</b> {{ details }}</p>
 <p><b>Transaction Id:</b> {{ paymentID }}</p>
 <a href = "/orders">Go to orders</a>
 </body>
