--- a/templates/viewcart.html
+++ b/templates/viewcart.html
@@ -39,7 +39,8 @@
 
     <div class="total">
         <b>Total: ₹ <span id="cart-total">0</span></b><br></br>
-        <button onclick="checkout()">Order</button>
+        <button id="order-btn" onclick="checkout()">Order</button>
+
 
     </div>
 </div>
