added address table and schema

--- a/templates/orders.html
+++ b/templates/orders.html
@@ -29,7 +29,7 @@
   .status.refunded { background: blue; }
   .status.delivered { background: darkgreen; }
 </style>
-
+<title>Orders</title>
 <div class="orders-container">
   <h2>Your Orders</h2>
   <a href ='/'>Home</a><br></br>
