created address listing endpoint and made addres html and added it to profile page.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,6 +10,7 @@
 
 <p><b>Username:</b> {{ username }}</p>
 <p><b>Email:</b> {{ email }}</p>
-<a href ="/address/form">Add address</a>
+<a href = '/api/addresses'>View addresses</a> |
+<a href ="/api/address/form">Add address</a>
 </body>
 </html>
