--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -39,7 +39,7 @@
 <h1>JOYCART</h1>
 <a href = '/cart'>View Cart</a> |
 <a href = '/orders'>Orders</a>  |
-<a href = '/api/profile'>My Profile</a> |
+<a href = '/profile'>My Profile</a> |
 <a href= "/seller/check">Seller Hub</a> |
 <form action="/api/logout" method="post" style="display: inline;">
     <button type="submit">Logout</button>
