--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,7 +10,7 @@
 
 <p><b>Username:</b> {{ username }}</p>
 <p><b>Email:</b> {{ email }}</p>
-<a href = '/api/addresses'>View addresses</a> |
-<a href ="/api/address/form">Add address</a>
+<a href = '/addresses'>View addresses</a> |
+<a href ="/api/address/add">Add address</a>
 </body>
 </html>
