fixed payment success page

--- a/templates/payment_success.html
+++ b/templates/payment_success.html
@@ -5,9 +5,7 @@
     <title>Redirecting...</title>
 </head>
 <body>
+    <h1>Payment Successful! &#9989;</h1>
     <p>You will be redirected to order page in 10 seconds. If not, 
        <a href="/orders">click here</a>.</p>
-<h2>Payments</h2>
-<hr>
-<p><b>Status:</b> {{ details }}</p>
-<p><b>Transaction Id:</b> {{ paymentID }}</p>
+
