--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Joycart-Dashboard</title>
+    <title>Joycart Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
