removed schemas as it has very less use

--- a/templates/product.html
+++ b/templates/product.html
@@ -175,6 +175,6 @@
 {% endif %}
 
 </div>
-<script src = '/static/js/product.js'></script>
+<script src = '/static/js/addtocart.js'></script>
 </body>
 </html>
