removed duplicate address select in user.py

--- a/templates/address_delivery.html
+++ b/templates/address_delivery.html
@@ -52,6 +52,7 @@
         </div>
       {% endfor %}
     </div>
+    <a href = "">
     <br></br>
     <button type="submit" class="continue-btn">
       Continue
