--- a/templates/fake_gateway.html
+++ b/templates/fake_gateway.html
@@ -4,6 +4,8 @@
   <input type="hidden" name="checkout_id" value="{{ checkout_id }}">
   <input type="hidden" name="payment_status" value="SUCCESS">
   <input type="hidden" name="signature" value="{{ signature }}">
+  <input type="hidden" name="gateway_payment_id" value="{{ gateway_payment_id }}">
+
 
   <button type="submit">Simulate Payment Success</button>
 </form>
