--- a/templates/prepaid_gateway.html
+++ b/templates/prepaid_gateway.html
@@ -1,4 +1,4 @@
-<h2>Fake Payment Gateway</h2>
+<h2>Payment Gateway</h2>
 
 <form method="post" action="/api/payment/webhook">
   <input type="hidden" name="checkout_id" value="{{ checkout_id }}">
