added buy now button

--- a/templates/product.html
+++ b/templates/product.html
@@ -165,6 +165,8 @@
                 <button id="add-to-cart-btn" data-product-id="{{ product.id }}">
                     Add to Cart
                 </button>
+                <button id="buy-btn" data-product-id="{{ product.id }}">Buy Now</button>
+
             </div>
         </div>
 
@@ -176,5 +178,7 @@
 
 </div>
 <script src = '/static/js/addtocart.js'></script>
+<script src = '/static/js/buynow.js'></script>
+
 </body>
 </html>
