--- a/templates/seller_products.html
+++ b/templates/seller_products.html
@@ -63,7 +63,7 @@
     <h4>{{ p.title }}</h4>
     <div class="price">₹{{ p.price }}</div>
     <a href="/seller/products/edit/{{ p.id }}">
-    <button>Edit</button></a>
+    <button>Edit</button></a><br></br>
     <form action="/seller/products/delete/{{ p.id }}" method="post">
     <button>Delete</button></form>
     
