--- a/templates/seller_dashboard.html
+++ b/templates/seller_dashboard.html
@@ -109,12 +109,12 @@
 
   
   <header class="seller-header">
-    <h1>Seller Dashboard</h1>
+    <h1>{{store_name}}</h1>
     <a href="/home">Home</a>
   </header>
 
-  
   <main class="seller-container">
+
     <div class="seller-grid">
 
       
